# perf-workshop

./: README.md
false-sharing/: 4.cpp  64.cpp  README.md
fix-key-error-in-bcc-memleak/: README.md  memleak.py  test.cpp
how-to-do-perf-script-with-stripped-binary/: README.md  test.cpp  testcpp  testcppdebug  testcppstripped
how-to-use-dynamically-linked-c++-in-alpine/: CMakeLists.txt  README.md  main.cpp  math_lib.h
introduce-to-gpu-profiling/: README.md  profiler.py  test.py
know-differential-flamegraphs-better/: README.md  diff1  diff1-2  diff1-2-n  diff1-3-n  diff1-4-n  diff2  diff3  diff4  diff4-1-n
perf-stack-size/: README.md  main.cpp
skid/: README.md  main.cpp
